# stardag

./: .gitignore  .pre-commit-config.yaml  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DEV_README.md  LICENSE  README.md  USER_GUIDE.md  _NOTES.md  conftest.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  stardag.code-workspace  tox.ini
app/stardag-api/: Dockerfile  README.md  alembic.ini  pyproject.toml
app/stardag-api/migrations/: create_sql_file.sh  env.py  script.py.mako
app/stardag-api/migrations/versions/: 20251211_203643_create_tasks_table.py  20251211_220000_normalized_schema.py  20251221_021110_add_created_by_id_to_organizations.py  20251223_120000_add_target_roots.py  20251223_150000_add_workspace_owner.py  20260104_120000_rename_task_family_to_name.py  20260105_230847_initial_schema.py  20260106_204326_add_task_registry_assets_table.py  20260111_143920_add_distributed_locks_table_and_.py  20260115_060612_rename_workspaces_to_environments.py  20260115_064448_rename_organizations_to_workspaces.py  20260116_142453_add_output_uri_to_tasks.py  20260119_200340_add_is_personal_to_workspace.py  20260129_224007_initial_schema_with_uuid7.py  20260202_112515_remove_unique_constraint_from_workspace_.py  5b1fb3cab891_create_tasks_table.py  5b1fb3cab891_create_tasks_table.sql
app/stardag-api/src/stardag_api/: __init__.py  config.py  main.py  schemas.py
app/stardag-api/src/stardag_api/auth/: __init__.py  dependencies.py  jwt.py  tokens.py
app/stardag-api/src/stardag_api/db/: __init__.py
app/stardag-api/src/stardag_api/models/: __init__.py  api_key.py  base.py  build.py  enums.py  environment.py  event.py  invite.py  lock.py  organization.py  organization_member.py  run.py  target_root.py  task.py  task_asset.py  task_dependency.py  user.py  workspace.py  workspace_member.py
app/stardag-api/src/stardag_api/routes/: __init__.py  auth.py  builds.py  locks.py  organizations.py  runs.py  search.py  target_roots.py  tasks.py  ui.py  workspaces.py
app/stardag-api/src/stardag_api/services/: __init__.py  api_keys.py  email.py  lock.py  slug.py  status.py
app/stardag-api/tests/: conftest.py  test_auth.py  test_auth_models.py  test_builds.py  test_email.py  test_health.py  test_locks.py  test_organizations.py  test_runs.py  test_task_assets.py  test_tasks.py  test_workspaces.py
docs/: README.md  conftest.py  mkdocs.yml  pyproject.toml
docs/docs/: CNAME  index.md
docs/docs/concepts/: asyncio.md  build-execution.md  decorator-vs-class-api.md  dependencies.md  index.md  parameters.md  targets.md  tasks.md
docs/docs/configuration/: cli.md  environments.md  index.md  profiles.md  workspaces.md
docs/docs/getting-started/: class-api.md  first-dag.md  index.md  installation.md  quickstart.md  registry-ui.md
docs/docs/how-to/: configure-storage.md  define-tasks.md  index.md  integrate-modal.md  integrate-prefect.md  ml-pipeline-example.md  use-api-registry.md
docs/docs/platform/: api.md  index.md  self-hosting.md  ui.md
docs/docs/reference/: api.md  exceptions.md  index.md
docs/docs/stylesheets/: extra.css
examples/: composability.py  pyproject.toml  task_api_three_levels.py
examples/ml_pipeline/: class_api.py  decorator_api.py  prefect_build.py
examples/modal/: default.py  default_2.py  dict_lock_poc.py
examples/src/stardag_examples/: task_api_three_levels.py
examples/stardag_examples/: api_registry_demo.py
examples/stardag_examples/ml_pipeline/: base.py  class_api.py  decorator_api.py  prefect_build.py
examples/stardag_examples/modal/: README.md  default.py
examples/stardag_examples/modal/basic/: app.py  main.py
examples/stardag_examples/modal/prefect/: app.py  main.py  task.py
integration-tests/: pyproject.toml  pyrightconfig.json
integration-tests/src/stardag_integration_tests/: __init__.py  conftest.py  docker_fixtures.py
integration-tests/tests/: conftest.py  test_api_auth.py  test_browser.py  test_cli.py  test_full_flow.py  test_smoke.py
lib/stardag/: LICENSE  README.md  conftest.py  pyproject.toml
lib/stardag-examples/: README.md  pyproject.toml  pyrightconfig.json
lib/stardag-examples/.stardag/: README.md  config.json
lib/stardag-examples/src/stardag_examples/: api_registry_demo.py  composability.py  registry_assets_demo.py  task_api_three_levels.py
lib/stardag-examples/src/stardag_examples/benchmarks/: README.md  __init__.py  completion_check.py  dags.py  results.json  run_benchmark.py  (+1 more)
lib/stardag-examples/stardag_examples/: api_registry_demo.py
lib/stardag-examples/stardag_examples/ml_pipeline/: README.md
lib/stardag-examples/stardag_examples/modal/: README.md
lib/stardag-examples/tests/: conftest.py  test_import.py
lib/stardag-examples/tests/test_ml_pipeline/: test_decorator_api.py
lib/stardag/benchmarks/: README.md  __init__.py  dags.py  results.json  run_benchmark.py  tasks.py
lib/stardag/src/stardag/: __init__.py  _auto_task.py  _base_model.py  _decorator.py  _hashable_set.py  _registry_asset.py  _target_base.py  _task.py  _task_id.py  _task_loads.py  base_model.py  config.py  exceptions.py  polymorphic.py  taskv2.py
lib/stardag/tests/: conftest.py  test_auto_task.py  test_base_model.py  test_cli_config.py  test_cli_profile.py  test_cli_registry.py  test_config.py  test_conftest.py  test_decorator.py  test_hashable_set.py  test_polymorphic.py  test_registry_asset.py  test_task.py  test_task_loads.py
lib/stardag/tests/test__cli/: test_config.py  test_registry.py
lib/stardag/tests/test__core/: test_alias_task.py  test_aliased_task.py  test_auto_task.py  test_decorator.py  test_hashable_set.py  test_registry_asset.py  test_task.py  test_task_loads.py
lib/stardag/tests/test_build/: _helpers.py  conftest.py  test_async_interface.py  test_build.py  test_concurrent.py  test_sequential.py  test_v2.py
lib/stardag/tests/test_integration/: conftest.py
lib/stardag/tests/test_target/: test__base.py  test_serialize.py
tests/integration/: README.md  conftest.py  pyproject.toml  test_api_auth.py  test_browser.py  test_cli.py  test_full_flow.py  test_smoke.py
tests/integration/test_frontend/: __init__.py
(+215 files in other folders)
