[project]
name = "stardag-workspace"
version = "0.0.0"
description = "Stardag monorepo workspace"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "ipython>=8.25.0",
    "pytest-asyncio>=0.23.7",
    "ipdb>=0.13.13",
    "pyright>=1.1.359",
    "stardag",
    "stardag-examples[ml-pipeline]",
]

[tool.uv]
package = false

[tool.uv.sources]
stardag = { workspace = true }
stardag-examples = { workspace = true }
stardag-api = { workspace = true }

[tool.uv.workspace]
members = ["lib/stardag", "lib/stardag-examples", "app/stardag-api"]

[tool.isort]
profile = "black"
known_local_folder = ["stardag", "stardag_examples", "stardag_api"]

[tool.pytest.ini_options]
testpaths = ["lib/stardag/tests"]
asyncio_mode = "auto"
