[project]
name = "stardag-docs"
version = "0.1.0"
description = "Documentation for Stardag"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
    # Stardag SDK for mkdocstrings to extract docstrings
    "stardag[api]",
    "ruff>=0.14.13",
]

[project.optional-dependencies]
dev = [
    "mkdocs-minify-plugin>=0.8",
]

[tool.uv.sources]
stardag = { path = "../lib/stardag", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-markdown-docs>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["docs"]
# asyncio_mode = "auto"
