[tool.poetry]
name = "stardag-examples"
version = "0.0.1"
description = ""
authors = ["Anders Huss <andhus@kth.se>"]
packages = [{ include = "stardag_examples", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"

stardag = {path = "../", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ipython = "^8.25.0"
pytest-asyncio = "^0.23.7"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
