[project]
name = "stardag-examples"
version = "0.0.1"
description = ""
authors = [{ name = "Anders Huss", email = "andhus@kth.se" }]
requires-python = ">=3.10,<3.14"  # TODO update modal deps
dependencies = [
    "pydantic>=2.8.2",
    "stardag[api]",
]

[project.optional-dependencies]
prefect = [
    "prefect>=3.0.3",
    "asyncpg>=0.30.0; python_version >= '3.13'",
]
s3 = [
    "boto3>=1.34",
    "botocore>=1.36",
    "boto3-stubs[s3]",
]
modal = [
    "modal>=0.73.59",
]
ml-pipeline = [
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "numpy>=2.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pyright>=1.1.359",
]

[tool.uv]
package = true

[tool.uv.sources]
stardag = { path = "../stardag" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stardag_examples"]

[tool.isort]
profile = "black"
known_local_folder = ["stardag", "stardag_examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
