[project]
name = "stardag"
dynamic = ["version"]
description = "Declarative and composable DAG framework for Python with persistent asset management"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Anders Huss", email = "info@stardag.com" }]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiofiles>=25.1.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.7.1",
    "uuid6>=2024.7.10",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "httpx-retries>=0.1.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
prefect = [
    "prefect>=3.0.3",
    "asyncpg>=0.30.0; python_version >= '3.13'",
]
s3 = [
    "boto3>=1.34",
    "botocore>=1.36",
    "boto3-stubs[s3]",
    "aioboto3>=13.0.0",
    "types-aioboto3[s3]",
]
modal = [
    "modal>=1.0.0",
]
pandas = [
    "pandas>=2.1.0",
]

[project.scripts]
stardag = "stardag._cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "ipython>=8.25.0",
    "pytest-asyncio>=0.23.7",
    "ipdb>=0.13.13",
    "pyright>=1.1.359",
    "ruff>=0.14.11",
    "pytest-markdown-docs>=0.9.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../.."

[tool.hatch.build.targets.wheel]
packages = ["src/stardag"]

[tool.isort]
profile = "black"
known_local_folder = ["stardag"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/stardag", "../../USER_GUIDE.md"]
asyncio_mode = "auto"
