[project]
name = "stardag-integration-tests"
version = "0.1.0"
description = "Integration tests for Stardag"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # Include stardag SDK for CLI testing
    "stardag",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--capture=no",  # Show output for debugging
]
markers = [
    "browser: marks tests that require a browser (deselect with '-m \"not browser\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
timeout = 120

[tool.pyright]
include = ["."]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pyright>=1.1",
]

[tool.uv.sources]
stardag = { path = "../../lib/stardag", editable = true }
